--- a/index.css
+++ b/index.css
@@ -646,14 +646,8 @@ input::-webkit-inner-spin-button {
     color: var(--bg-color);
 }
 
-#mint_button_LL:disabled {
-    background-color: var(--dark-gold);
-    color: rgb(17, 13, 5);
-    cursor: not-allowed;
-}
 
-#decrease_button_LL:disabled,
-#increase_button_LL:disabled {
+.stepper-btns:disabled {
     background-color: var(--dark-gold);
     color: rgb(17, 13, 5);
     cursor: not-allowed;
